更新Java至25
更新lavaplayer至2.2.6
更新logback-classic至1.5.32
引入jdave支援Dave語音加密
修正部分過時寫法